Fixed potential deadlock in Utils.systemExec()